Update onboarding activity to use setupdesign elements. This also handles expressive theming.
Legacy: https://drive.google.com/file/d/1z0qsgEJxnN4RMPfzW66Y5c4h2sT3s9qI/view?usp=drive_link&resourcekey=0-s2LIzSmi1GQM_HtyitH3zw
Expressive: https://drive.google.com/file/d/14zjRjHmL1Jpk2M5K2ciCUk3u9O04VIdL/view?usp=drive_link&resourcekey=0-LOBPRIw9Flp6FgBCFDZJdA

Test: atest
Fix: 378438360
Flag: NONE Handled by settings and setupdesign
Change-Id: I04ab3a6e3c01ef432332211711fbfb0a08cd7e6e

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -737,10 +737,8 @@
     <string name="onboarding_description" description="Content description of Health Connect app on the onboarding page">Health&#160;Connect stores your health and fitness data, giving you a simple way to sync the different apps on your device</string>
     <string name="onboarding_description_health_records" description="Content description of Health Connect app on the onboarding page that includes health records">Health&#160;Connect stores and syncs your health and fitness data from different apps.\n\n<b>Fitness and wellness data,</b> including exercise sessions, steps, nutrition, sleep and more\n\n<b>Health records,</b> including vaccines, lab results and more</string>
     <string name="onboarding_description_with_health_connect" description="Content description of Health Connect app on the onboarding page that explains what the user can do with this app">With Health&#160;Connect you can</string>
-    <string name="share_data" description="Label used to show how the user can share data with apps">Share data with your apps</string>
-    <string name="share_data_description" description="Content description for how the user can share data with apps">Choose the data each app can read or write to Health&#160;Connect</string>
-    <string name="manage_your_settings" description="Label used to show how the user can manage settings and privacy">Manage your settings and privacy</string>
-    <string name="manage_your_settings_description" description="Content description for how the user can change app permissions and manage data">Change app permissions and manage your data at any time</string>
+    <string name="share_data_text" description="Text explaining how the user can share data with apps"><b>Share data with your apps</b>\nChoose the data each app can read or write to Health&#160;Connect</string>
+    <string name="manage_your_settings_text" description="Text explaining how the user can change app permissions and manage data"><b>Manage your settings and privacy</b>\nChange app permissions and manage your data at any time</string>
     <string name="onboarding_go_back_button_text" description="Content description for button to exit from onboarding page">Go back</string>
     <string name="onboarding_get_started_button_text" description="Content description for button to get started with Health Connect app">Get started</string>
     <string name="previously_opened" description="Label used as key to track if user has opened Health Connect previously" translatable="false">Previously Opened</string>
