Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I1d06f6e3c599dae8ab56566916f8aa132af81d89

--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -685,7 +685,7 @@
     <string name="dumbbell_triceps_extension_left_arm" msgid="6756023069611493063">"Bal kezes tricepsznyújtás egykezes súlyzóval"</string>
     <string name="dumbbell_triceps_extension_right_arm" msgid="1498470275564554389">"Jobb kezes tricepsznyújtás egykezes súlyzóval"</string>
     <string name="dumbbell_triceps_extension_two_arm" msgid="5409860665522903159">"Kétkezes tricepsznyújtás egykezes súlyzóval"</string>
-    <string name="elliptical" msgid="5148914059968910839">"Edzés ellipszis tréneren"</string>
+    <string name="elliptical" msgid="5148914059968910839">"Edzés elliptikus tréneren"</string>
     <string name="exercise_class" msgid="32582249527931454">"Edzőcsoport"</string>
     <string name="fencing" msgid="410347890025055779">"Vívás"</string>
     <string name="football_american" msgid="8564554592554502623">"Amerikai futball"</string>
