--- a/apk/res/values-mk/strings.xml
+++ b/apk/res/values-mk/strings.xml
@@ -745,7 +745,7 @@
     <string name="tennis" msgid="6627063985750125504">"Тенис"</string>
     <string name="upper_twist" msgid="3382862516792841928">"Извртување на горниот дел од телото"</string>
     <string name="volleyball" msgid="7469885673961163729">"Одбојка"</string>
-    <string name="walking" msgid="4782496160454621769">"Пешачење"</string>
+    <string name="walking" msgid="4782496160454621769">"Одење"</string>
     <string name="water_polo" msgid="2527119748097860708">"Ватерполо"</string>
     <string name="weightlifting" msgid="7586735291662318085">"Кревање тегови"</string>
     <string name="wheelchair" msgid="2226734836271500057">"Инвалидска количка"</string>
